--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <header>
         <title>ng2-demo</title>
+        <base href="/">
         <script src="http://127.0.0.1:9090/webpack-dev-server.js"></script>
     </header>
     <body>
