--- a/src/app.template.html
+++ b/src/app.template.html
@@ -1,7 +1,7 @@
 <div class="ng2-demo">
-    <input type="text" name="todo_input" id="todo_input" [(ngModel)]="todo" />
-    <button (click)="add()">add</button>
-    <ul>
-        <li *ngFor="let todo of todos">{{todo}}</li>
-    </ul>
+    <div class="nav">
+        <a routerLink="/dashboard">热门房源</a>
+        <a routerLink="/heroes">所有房源</a>
+    </div>
+    <router-outlet></router-outlet>
 </div>
